Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56107

Possible include error in QtWebEngineWidgets

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.6.3, 5.7.1
    • 5.7.0
    • WebEngine
    • None
    • Windows 10, msvc2013, Qt-5.7.0 community edition
    • 7d6c94db4c42339ca2948be802f2579ba5522f58 e4214e94f14055bb26fccda5895fe848d53ccd63

    Description

      I just upgraded from 5.5 to 5.7 and ran into a compile error:
      C:\Qt\5.7\msvc2013_64\include\QtWebEngineWidgets\qwebenginecontextmenudata.h:43: error: C1083: Cannot open include file: 'qtwebenginewidgetsglobal.h': No such file or directory

      The fix was rather easy:
      Instead of
      #include <qtwebenginewidgetsglobal.h>
      change the line to
      #include <QtWebEngineWidgets/qtwebenginewidgetsglobal.h>

      In fact everywhere else qtwebenginewidgetsglobal.h is included, it is done like this.

      Affected files:
      C:\Qt\5.7\msvc2013_64\include\QtWebEngineWidgets\qwebenginecontextmenudata.h
      C:\Qt\5.7\msvc2013_64\include\QtWebEngineWidgets\qwebenginefullscreenrequest.h

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            maartenve Maarten van Eeuwijk
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes