Use canonical include paths for public headers

Do not rely on "include/QtWebEngineWidgets" or "include/QtCore"
being in the default include path.

Task-number: QTBUG-56107
Change-Id: I1a1eb7baf6d3166239eadc5b0b9863704e87888c
Reviewed-by: Michael Brüning <michael.bruning@qt.io>